unpackaged/main/default/objects/Contract_Type__c/Contract_Type__c.object-meta.xml
<CustomObject>
    <label>Contract Type</label>
    <nameField>
        <label>Contract Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>