unpackaged/main/default/objects/Contract_Type__c/fields/Active_Contract__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Contract</label>
    <type>Checkbox</type>
</CustomField>