unpackaged/main/default/objects/Contract_Type__c/fields/Activity_Retake__c.field-meta.xml
<CustomField>
    <fullName>Activity_Retake__c</fullName>
    <label>Activity Retake</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_Retake</valueSetName>
    </valueSet>
</CustomField>