unpackaged/main/default/objects/Contract_Type__c/fields/Application_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Application_Conditions__c</fullName>
    <label>Application Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Conditions</valueSetName>
    </valueSet>
</CustomField>