unpackaged/main/default/objects/Contract_Type__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingType</valueSetName>
    </valueSet>
</CustomField>