unpackaged/main/default/objects/Contract_Type__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <label>Folder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Folder</valueSetName>
    </valueSet>
</CustomField>