unpackaged/main/default/objects/Contract_Type__c/fields/Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Months__c</fullName>
    <label>Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>