unpackaged/main/default/objects/Contract_Type__c/fields/FullService__c.field-meta.xml
<CustomField>
    <fullName>FullService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FullService</label>
    <type>Checkbox</type>
</CustomField>