unpackaged/main/default/objects/Contract_Type__c/fields/Generation_Profile__c.field-meta.xml
<CustomField>
    <fullName>Generation_Profile__c</fullName>
    <label>Generation Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generation_Profile</valueSetName>
    </valueSet>
</CustomField>