unpackaged/main/default/objects/Contract_Type__c/fields/Group_Code_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Group_Code_for_Billing__c</fullName>
    <label>Group Code for Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Code_for_Billing</valueSetName>
    </valueSet>
</CustomField>