unpackaged/main/default/objects/Contract_Type__c/fields/InfoRevision__c.field-meta.xml
<CustomField>
    <fullName>InfoRevision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InfoRevision</label>
    <type>Checkbox</type>
</CustomField>