unpackaged/main/default/objects/Contract_Type__c/fields/Legal_Label__c.field-meta.xml
<CustomField>
    <fullName>Legal_Label__c</fullName>
    <label>Legal Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>