unpackaged/main/default/objects/Contract_Type__c/fields/Months_for_Notice__c.field-meta.xml
<CustomField>
    <fullName>Months_for_Notice__c</fullName>
    <label>Months for Notice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>