unpackaged/main/default/objects/Contract_Type__c/fields/Opportunity_Code_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code_Part_1__c</fullName>
    <label>Opportunity Code Part 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Code_Part_1</valueSetName>
    </valueSet>
</CustomField>