unpackaged/main/default/objects/Contract_Type__c/fields/Original_User_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_User_Code__c</fullName>
    <label>Original User Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Original_User_Code</valueSetName>
    </valueSet>
</CustomField>