unpackaged/main/default/objects/Contract_Type__c/fields/Renewal_Mode__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Mode__c</fullName>
    <label>Renewal Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Renewal_Mode</valueSetName>
    </valueSet>
</CustomField>