unpackaged/main/default/objects/Contract_Type__c/fields/Sales_Label__c.field-meta.xml
<CustomField>
    <fullName>Sales_Label__c</fullName>
    <label>Sales Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>