unpackaged/main/default/objects/Contract_Type__c/fields/ToSchedule__c.field-meta.xml
<CustomField>
    <fullName>ToSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToSchedule</label>
    <type>Checkbox</type>
</CustomField>